# cough

lib/: CMakeLists.txt
lib/alloc/: alloc.c
lib/analyzer/: analyzer.c  analyzer.h
lib/assembler/: assembler.c  assembler.h
lib/ast/: ast.c  ast.h  binding.h  binding_id.h  expression.h  memory.h  type.c  type.h
lib/bytecode/: bytecode.c  bytecode.h
lib/collections/: CMakeLists.txt  array.h  hash_map.c  hash_map.h  string.c
lib/diagnostics/: errno.c  errno.h  report.h  result.h
lib/disassembler/: disassembler.h
lib/emitter/: emitter.c  emitter.h
lib/generator/: generator.c  generator.h
lib/parser/: CMakeLists.txt  gen_float_parser_data.py  parser.c  parser.h
lib/source/: source.h
lib/tokenizer/: tokenizer.c  tokenizer.h
lib/tokens/: token.c  token.h
lib/util/: CMakeLists.txt
lib/util/alloc/: CMakeLists.txt  alloc.c  alloc.h  buf.c  buf.h
lib/util/collections/: array.c  array.h  hash_map.h  string.c  string.h
lib/util/ops/: CMakeLists.txt  eq.c  eq.h  hash.c  hash.h  ptr.c  ptr.h
lib/util/primitives/: CMakeLists.txt  primitives.h
lib/vm/: diagnostics.h  system.h  vm.c
tests/tests/: CMakeLists.txt  common.c  common.h
tests/tests/ast/: conditional.c  constant_fn.c  expressions.c  functions.c  identity_fn.c  numbers.c
tests/tests/collections/: array_buf.c  hash_map.c  string_buf.c
tests/tests/generator/: conditional.c  expression.c  functions.c
tests/tests/tokenizer/: tokenizer.c
tests/tests/vm/: expression.c
